[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compligator"
version = "0.3.4-beta"
description = "Compliance document aggregator — download, sync, and normalize framework docs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "pymupdf>=1.24",
]

[project.scripts]
compligator = "compligator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["compligator*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["fitz", "playwright.*", "bs4"]
ignore_missing_imports = true

# Downloaders have pre-existing bs4 AttributeValueList type issues — Phase 2 scope
[[tool.mypy.overrides]]
module = ["compligator.downloaders.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: marks fast, isolated unit tests",
    "integration: marks tests that touch real files, network, or external state",
    "slow: marks tests that take more than a few seconds",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-requests>=2.32.4.20260107",
]
